--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
         <h1>Niraj <span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
+        <a href="#projects" type="button" class="cta btn btn-primary">Portfolio</a>
       </div>
     </div>
   </section>
