--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1>Niraj <span></span></h1>
         <a href="#projects" type="button" class="cta btn btn-primary">Portfolio</a>
       </div>
-      <img src="./hero-bg.png" alt="No image" class="heroImg">
+      <img src="hero-bg.png" alt="No image" class="heroImg">
     </div>
   </section>
   <!-- End Hero Section  -->
