--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
           <a href="https://www.instagram.com/niraj3298/"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="https://www.linkedin.com/in/niraj-kumar-4789271aa/"><img src="github.png" /></a>
+          <a href="https://www.linkedin.com/in/niraj-kumar-4789271aa/"><img src="linkedin.png" /></a>
         </div>
         <div class="social-item">
-          <a href="https://github.com/Niraj-05"><img src="linkedin.png" /></a>
+          <a href="https://github.com/Niraj-05"><img src="github.png" /></a>
         </div>
       </div>
       <p>Copyright © 2023 Niraj. All rights reserved</p>
